# Demon

./: Cargo.toml  README.md
.github/workflows/: cargo-deny.yml  ci.yml  rust.yml
files/: form.toml  user_agent.toml
src/: lib.rs  main.rs
src/channel/: mod.rs
src/cli/: args.rs  cmd.rs  mod.rs
src/common/: constant.rs  filter.rs  form.rs  mod.rs  user_agent.rs  util.rs
src/handler/: collect.rs  crawler.rs  duplicate.rs  form.rs  form_js.rs  mod.rs  robots.rs  scan_policy.rs  sitemap.rs
src/model/: task.rs
tests/: integration_test.rs
