[package]
description = "Demon is a powerful browser crawler for web vulnerability scanners"
name = "demon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/baerwang/Demon"
publish = false

[profile.release]
debug = false
strip = true

[profile.release-prod]
inherits = "release"
codegen-units = 1
lto = "thin"

[profile.release-profiling]
inherits = "release"
debug = true
strip = false
codegen-units = 4

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"], default-features = false }
anyhow = "1.0.76"
clap = { version = "4.1", default-features = false, features = [
    "std",
    "help",
    "usage",
    "suggestions",
    "cargo",
    "derive",
    "string"
] }
log = "0.4.20"
toml = "0.8.8"
rand = "0.8.5"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1.0.108"
serde = "1.0.193"
serde-xml-rs = "0.6.0"
serde_derive = "1.0.194"
regex = "1.10.2"
url = "2.5.0"
tokio = { version = "1.35.1", features = ["full"] }
dashmap = { version = "5.4", features = ["serde"] }
futures = "0.3.30"
